2005-08-19  Not Zed  <NotZed@Ximian.com>

	* em-format.c (emf_multipart_encrypted): put the s/mime message
	back, awaiting string approval for a change otherwise.

2005-08-18  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_message_add_bar): dont add
	attachment bar if it is disabled.
	(efhd_attachment_button): dont add attachments if there is no bar.

	* em-format.c (emf_inlinepgp_signed, emf_inlinepgp_encrypted): fix
	the error messages for consistency.  We dont need to check
	content-type, since we only get called with the right one.
	(emf_multipart_encrypted): fix up wrong s/mime error.

	* em-format-html.c (efh_inlinepgp_signed)
	(efh_inlinepgp_encrypted): moved to em-format.c; otherwise this
	will break replying, etc.

	** See #271894.

	* em-format.c (emf_multipart_encrypted): use the content object's
	content-type to check types.

2005-08-16  Not Zed  <NotZed@Ximian.com>

	** See #312668.

	* mail-component.c (impl_setLineStatus): new offline interface.
	(setline_check, setline_done): and implementation.

	* mail-offline-handler.[ch]: destroyed, burnt, dissolved in acid.

2005-08-17  Srinivasa Ragavan <sragavan@novell.com>

	* em-format-html-display.c 
	(efhd_bar_save_selected): Fix a warning.
	(efhd_bar_resize): Fix the bar size to match other widgets.
	(efhd_bar_scroll_event): Fix scroll issue over bar. bug #312224.
	(efhd_add_bar): Add a frame around the attachment bar. bug #312033

2005-08-17  Kaushal Kumar  <kakumar@novell.com>

	* em-composer-prefs.c (url_requested): Add the close call for fd.

	See bug #307375.

2005-08-15  Not Zed  <NotZed@Ximian.com>

	** See #313440.

	* Makefile.am (mailinclude_HEADERS): Include the idl generated
	headers.

2005-08-16  Srinivasa Ragavan <sragavan@novell.com>

	* em-format-html-display.c (efhd_attachment_button): Sets the filename
	in the attachment structure instead of the part
	
2005-08-15  Christian Kellner  <gicmo@gnome.org>

	* mail-send-recv.c: (get_folders): Honour the check_all